ONA-12: fix margini video - visibile da iphone

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -530,6 +530,14 @@ section {
     }
 }
 
+.video_container {
+    display: block !important;
+
+    video {
+        width: 100%;
+    }
+}
+
 figcaption {
     font-size: small;
 }
